--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pokepipeline-frontend",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/rahibbutt/pokepipeline-frontend"
